Commit login y register1

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -13,6 +13,8 @@
     <!-- ESTILOS -->
     <link rel="stylesheet" href="/css/styles-index.css">
     <link rel="stylesheet" href="/css/styles-header-footer.css">
+    <link rel="stylesheet" href="/css/styles-login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- ICONO DE LA PESTAÑA -->
     <link rel="icon" href="/img/icono.png">
@@ -79,7 +81,49 @@
     </header>
 
     <main>
-        
+                <div>
+                    <form>
+                        <h1>Acceder</h1>
+                        <br>
+                        <label for="nombre">Nombre de usuario</label>
+                        <br>
+                        <ol><il><input type="text"></ol></il>
+                        <br>
+                        <br>
+                        <label for="nombre">Contraseña</label>
+                        <br>
+                        <ol><il><input type="password"></ol></il>
+                        <br>
+                        <a href="#">Olvide mi contraseña</a>
+                        <br>
+                        <br>
+                        <button>Acceder</button>
+                    </form>
+                </div>
+            <br>
+                <div class="register">
+                    <form>
+                        <h1>Registrate</h1>
+                        <br>
+                        <label for="nombre">Nombre de usuario</label>
+                        <br>
+                        <ol><il><input type="text"></il></ol>
+                        <br>
+                        <br>
+                        <label for="nombre">Direccion de correo electronico</label>
+                        <br>
+                        <ol><il><input type="email"></il></ol>
+                        <br>
+                        <br>
+                        <label for="nombre">Contraseña</label>
+                        <br>
+                        <ol><il><input type="password"></il></ol>
+                        <br>
+                        <br>
+                        <button>Registrate</button>
+                    </form>
+                    
+                </div>
     </main>
 
     <footer>
