--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -79,7 +79,26 @@
     </header>
 
     <main>
+        <!-- Cuadros pequeños (imágenes) -->
+        <section class="imagenes-pequeñas">
+            <div class="imagen-pequeña"><img src="imagen1.jpg" alt="imagen 1 de producto"></div>
+            <div class="imagen-pequeña"><img src="imagen2.jpg" alt="imagen 2 de producto"></div>
+            <div class="imagen-pequeña"><img src="imagen3.jpg" alt="imagen 3 de producto"></div>
+        </section>
+        <div class="imagen-seleccionada"><img src="imagen1.jpg" alt="Producto 1"></div>
         
+        <!--descripción del producto -->
+        <section class="producto-detalle">
+            <div class="descripcion-producto">
+                <h2>Nombre del Producto</h2>
+                <p>Precio: $XX.XX</p>
+                <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="cantidad">
+                    <button>Añadir al carrito</button>
+                    <button>Cantidad</button> <!-- Este botón abriría una ventana/modal para seleccionar la cantidad -->
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
