--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -79,12 +79,13 @@
     </header>
 
     <main>
-        <!-- Cuadros pequeños (imágenes) -->
+        <!-- imagenes pequeñas -->
         <section class="imagenes-pequeñas">
             <div class="imagen-pequeña"><img src="imagen1.jpg" alt="imagen 1 de producto"></div>
             <div class="imagen-pequeña"><img src="imagen2.jpg" alt="imagen 2 de producto"></div>
             <div class="imagen-pequeña"><img src="imagen3.jpg" alt="imagen 3 de producto"></div>
         </section>
+        <!-- Imagen seleccionada -->
         <div class="imagen-seleccionada"><img src="imagen1.jpg" alt="Producto 1"></div>
         
         <!--descripción del producto -->
