--- a/src/views/register.html
+++ b/src/views/register.html
@@ -79,7 +79,33 @@
     </header>
 
     <main>
-        
+        <div >
+            <form class="register">
+                <h3 class="acceder">Registrarse</h3>
+                <br>
+                <label for="nombre">Nombre de usuario *</label>
+                <br>
+                <ol><il><input type="text"></ol></il>
+                <br>
+                <label for="nombre">Dieccion de correo electronico *</label>
+                <br>
+                <ol><il><input type="text"></ol></il>
+                <br>
+                <label for="nombre">Contraseña *</label>
+                <br>
+                <ol><il><input type="password"></ol></il>
+                <br>
+                <label for="nombre">Repetir contraseña *</label>
+                <br>
+                <ol><il><input type="password"></ol></il>
+                <br>
+                <button type="submit" class="btn"> Registrarse</button>
+                <br>
+                
+                
+            </form>
+        </div>
+    <br>
     </main>
 
     <footer>
