--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -11,7 +11,29 @@ main{
     text-align:center ;
 }
 
-.register{
-    background-position: right center;
-    border-width: 15%;
+.login{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 375px;
+    border: solid;
+    border-width: 1px;
 }
+
+.btn {
+    background-color: lightblue;
+    color: black;
+    padding: 5px 20px;
+    text-decoration: none;
+  }
+
+  .password{
+    font-style: italic;
+    color: blue; 
+    font-size: 13px;
+  }
+
+  .acceder{
+    font-weight: bold;
+  }
+
