--- a/public/css/styles-header-footer.css
+++ b/public/css/styles-header-footer.css
@@ -138,16 +138,29 @@ header {
         align-items: center;
         list-style: none;
         width: 100%;
-        padding: 1rem;
+        padding: 0.3rem 10%;
+        border: solid 1px #CACFD2;
+    }
+
+    .nav-categorias li a {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
     }
 
     .nav-categorias li {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        border: solid 1px #CACFD2;
         width: 20%;
         height: 2rem;
+        border-left: solid 1px #CACFD2;
+        border-bottom: solid 0.3rem transparent;
+        transition: all 0.3s;
+    }
+
+    .nav-categorias li:last-child {
+        border-right: solid 1px #CACFD2;
     }
 
     .nav-categorias a {
@@ -155,6 +168,10 @@ header {
         font-weight: bold;
         color: black;
         font-size: 1rem;
+    }
+
+    .nav-categorias li:hover {
+        border-bottom: solid 0.3rem #92DCE5;
     }
 }
 
@@ -272,5 +289,23 @@ footer {
 
     .iconos-redes {
         font-size: 1rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .contenedor-logo-footer {
+        width: 20%;
+    }
+
+    .enlaces {
+        width: 50%;
+    }
+
+    .enlaces a {
+        font-size: 1rem;
+    }
+
+    .redes-sociales {
+        width: 30%;
     }
 }
