--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -77,9 +77,101 @@
         </section>
 
     </header>
-
+<!-- CONTENEDOR PRINCIPAL -->
     <main>
-        
+        <section class="contenedor-carrito">
+            <h1>Mi Carrito</h1>
+            <div class="contenedor-lista-carrito">
+<!-- DETALLE DEL CARRITO -->
+                <div class="titulo-lista-carrito">
+                    <table>
+                        <thead>
+                             <tr>
+                                 <th>Nombre</th>
+                                 <th>Cantidad</th>
+                                 <th>Precio</th>
+                             </tr>
+                        </thead>
+                    </table>
+                </div>
+<!-- IMAGEN DEL PRODUCTO -->
+                <div class="producto">
+                    <div class="producto-img">
+                        <img src="https://www.mink.com.ar/qloud/ryr/fotos/19607-0.jpg" alt="">
+                    </div>
+                    <div class="detalle-nombre">
+                        <p>Auricular Gamers</p>
+                    </div>
+<!-- SECCION CANTIDAD DEL PRODUCTO -->
+                    <div class="detalle-cantidad">
+                        <button id="boton-sumar">+</button>
+                        <input type="number">
+                        <button id="boton-restar">-</button>
+                    </div>
+<!-- PRECIO DEL PRODUCTO -->
+                    <div class="detalle-precio">
+                        <p>$9.88</p>
+                    </div>
+<!-- ELIMINA EL PRODUCTO -->
+                    <button id="borrar-producto">X</button>
+                </div>
+<!-- IMAGEN DEL PRODUCTO -->
+                <div class="producto">
+                    <div class="producto-img">
+                        <img src="https://www.mink.com.ar/qloud/ryr/fotos/19607-0.jpg" alt="">
+                    </div>
+                    <div class="detalle-nombre">
+                        <p>Auricular Gamers</p>
+                    </div>
+<!-- SECCION CANTIDAD DEL PRODUCTO -->
+                    <div class="detalle-cantidad">
+                        <button id="boton-sumar">+</button>
+                        <input type="number">
+                        <button id="boton-restar">-</button>
+                    </div>
+                    <div class="detalle-precio">
+                        <p>$9.88</p>
+                    </div>
+<!-- ELIMINA EL PRODUCTO -->
+                    <button id="borrar-producto">X</button>
+                </div>
+<!-- IMAGEN DEL PRODUCTO -->
+                <div class="producto">
+                    <div class="producto-img">
+                        <img src="https://www.mink.com.ar/qloud/ryr/fotos/19607-0.jpg" alt="">
+                    </div>
+                    <div class="detalle-nombre">
+                        <p>Auricular Gamers</p>
+                    </div>
+<!-- SECCION CANTIDAD DEL PRODUCTO -->
+                    <div class="detalle-cantidad">
+                        <button id="boton-sumar">+</button>
+                        <input type="number">
+                        <button id="boton-restar">-</button>
+                    </div>
+                    <div class="detalle-precio">
+                        <p>$9.88</p>
+                    </div>
+<!-- ELIMINA EL PRODUCTO -->
+                    <button id="borrar-producto">X</button>
+                </div>
+            </div>
+<!-- SECCION DE PRECIO FINAL -->
+            <div class="contenedor-precio-final">
+                <p>Precio Total:</p>
+                <div class="detalle-precio-total">
+                    <p>$ 9.88</p>
+                    <p>$ 23.99</p>
+                    <p>$ 9.88</p>
+                </div>
+                <div class="precio-total">
+                    <p>$43.75</p>
+                </div>
+<!-- BOTON DE FINALIZAR COMPRA -->
+                <button class="btn-comprar">Finalizar Compra</button>
+            </div>
+            
+        </section>
     </main>
 
     <footer>
