añadiendo el index y detalles

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -78,8 +78,205 @@
 
     </header>
 
+    <section class="banner-imagenes-movil">
+        <article class="slider-box">
+            <ul>
+                <li><img src="/img/banner/banner-1-movil.webp"></li>
+                <li><img src="/img/banner/banner-2-movil.webp"></li>
+                <li><img src="/img/banner/banner-3-movil.webp"></li>
+                <li><img src="/img/banner/banner-4-movil.webp"></li>
+                <li><img src="/img/banner/banner-5-movil.webp"></li>
+            </ul>
+        </article>
+    </section>
+
+    <section class="banner-imagenes">
+        <article class="slider-box">
+            <ul>
+                <li><img src="/img/banner/banner-1.webp" id="banner-1"></li>
+                <li><img src="/img/banner/banner-2.webp"></li>
+                <li><img src="/img/banner/banner-3.webp"></li>
+                <li><img src="/img/banner/banner-4.webp"></li>
+                <li><img src="/img/banner/banner-5.webp"></li>
+            </ul>
+        </article>
+    </section>
+
     <main>
-        
+        <section class="contenedor-productos-destacados">
+            <article class="titulo-contenedor">
+                <h3>Productos Destacados</h3>
+            </article>
+
+            <article>
+                <article class="contenedor-productos">
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/producto-1.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 78.000</h4>
+                            <p>Monitor HKC ANTTEQ F2145M 21.45" 75hz</p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/producto-2.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 84.000</h4>
+                            <p>Monitor HKC ANTTEQ F238M 23.8" IPS 75hz</p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/producto-3.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 85.000</h4>
+                            <p>Watercooling - Refirigeración Líquida para CPU/p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/producto-4.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 44.000</h4>
+                            <p>Coolers para CPU Redragon Effect RGB Air 120mm CC-2000</p>
+                        </div>
+                    </div>
+
+                </article>
+            </article>
+
+            <article class="ver-mas">
+                <a href="">Ver más <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+        </section>
+
+        <section class="contenedor-productos-ofertas">
+            <article class="titulo-contenedor">
+                <h3>Ofertas</h3>
+            </article>
+
+
+            <article>
+                <article class="contenedor-productos">
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/oferta-1.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 78.000 <div class="descuento">20% Off</div></h4>
+                            <p>Smartwatch Amazfit Bip 3 Pink</p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/oferta-2.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 200.000 <div class="descuento">17% Off</div></h4>
+                            <p>XP-PEN Artist 22R PRO</p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/oferta-3.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 130.000 <div class="descuento">25% Off</div></h4>
+                            <p>Monitor Philips 272V8LA/55 27'' FULL HD</p>
+                        </div>
+                    </div>
+
+                    <div class="producto">
+                        <div>
+                            <img src="/img/productos/oferta-4.webp" alt="">
+                        </div>
+
+                        <div>
+                            <h4>$ 65.000 <div class="descuento">15% Off</div></h4>
+                            <p>Auricular Redragon Zeus X White H510W-RGB</p>
+                        </div>
+                    </div>
+
+                </article>
+            </article>
+
+            <article class="ver-mas">
+                <a href="">Ver más <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+        </section>
+
+        <section class="contenedor-noticias">
+
+            <article class="noticias">
+                <div class="img-noticia">
+                    <img src="/img/noticia-1.jpeg" alt="">
+                </div>
+                    
+                <div>
+                    <h3>IBM anuncia el comienzo de la “era de la utilidad cuántica” y anticipa un superordenador en 2033</h3>
+    
+                    <p>La compañía asegura haber alcanzado un sistema de computación que no se puede simular con procedimientos clásicos</p>
+                </div>
+                
+                <div class="ver-mas-noticias">
+                    <a href="https://elpais.com/tecnologia/2023-12-04/ibm-anuncia-el-comienzo-de-la-era-de-la-utilidad-cuantica-y-anticipa-un-superordenador-en-2033.html" target="_blank">
+                    Ver más <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
+            </article>
+
+            <article class="noticias">
+                <div class="img-noticia">
+                    <img src="/img/noticia-2.webp" alt="">
+                </div>
+                    
+                <div>
+                    <h3>Microsoft entra en el consejo de OpenAI como observador, pero sin derecho a voto</h3>
+    
+                    <p>Sam Altman ya es de nuevo jefe de la firma de inteligencia artificial: “Se escribirán libros de lo que ha pasado”</p>
+                </div>
+                 
+                <div class="ver-mas-noticias">
+                    <a href="https://elpais.com/tecnologia/2023-11-30/microsoft-entra-en-el-consejo-de-openai-como-observador-pero-sin-derecho-a-voto.html" target="_blank">
+                    Ver más <i class="fa-solid fa-chevron-right"></i></a>
+                </div>
+            </article>
+
+        </section>
+
+        <section class="banner-marcas">
+            <article class="slider-box-marcas">
+                <ul>
+                    <li><img src="/img/marcas/marca-1.svg"></li>
+                    <li><img src="/img/marcas/marca-2.svg"></li>
+                    <li><img src="/img/marcas/marca-3.svg"></li>
+                    <li><img src="/img/marcas/marca-4.svg"></li>
+                    <li><img src="/img/marcas/marca-5.svg"></li>
+                    <li><img src="/img/marcas/marca-6.svg"></li>
+                    <li><img src="/img/marcas/marca-7.svg"></li>
+                    <li><img src="/img/marcas/marca-8.svg"></li>
+                    <li><img src="/img/marcas/marca-2.svg"></li>
+                </ul>
+            </article>
+        </section>
     </main>
 
     <footer>
