--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -1,39 +1,119 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
+/* ESTILOS DEL CONTENEDOR DE LOGIN */
 
-main{
+.fondo-login {
+    background-image: url(/img/fondo-login.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 4rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align:center ;
+    justify-content: space-around;
 }
 
-.login{
-    display: block;
-    justify-content: center;
-    align-items: center;
-    width: 375px;
-    border: solid;
-    border-width: 1px;
+.contenedor-login {
+    background-color: white;
+    border-radius: 0.5rem;
+    padding: 1.5rem;
+    width: 60vw;
 }
 
-.btn {
-    background-color: lightblue;
-    color: black;
-    padding: 5px 20px;
-    text-decoration: none;
-  }
+.contenedor-login form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
 
-  .password{
-    font-style: italic;
-    color: blue; 
-    font-size: 13px;
-  }
-
-  .acceder{
+.contenedor-login label {
+    margin-bottom: 0.5rem;
     font-weight: bold;
-  }
+  
+}
 
+.contenedor-login input {
+    margin-bottom: 1rem;
+    border-radius: 0.5rem;
+    border: 1px solid #ced4da;
+    height: 2.5rem;
+    padding: 0.5rem;
+}
+
+.contenedor-login input:focus {
+    outline: solid 2px #001F54;
+}
+
+.contenedor-login a {
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: #001F54;
+}
+
+.titulo-login {
+    text-align: center;
+    margin-bottom: 2rem !important;
+    font-size: 2rem;
+    font-family: 'Fjalla One', sans-serif;
+    color: black !important;
+}
+
+.acceder {
+    display: flex;
+    background-color: #001F54;
+    border: none;
+    border-radius: 0.5rem;
+    color: white;
+    font-weight: bold;
+    padding: 1rem;
+    height: 2.5rem;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.frase-login p {
+    text-align: center;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 1.4rem;
+    color: white;
+    margin-top: 1rem;
+}
+
+/* MEDIA QUERIES DEL LOGIN */
+
+@media (min-width: 768px) {
+    
+    .fondo-login {
+        flex-direction: row-reverse;
+        padding: 7rem 3rem;
+    }
+
+    .frase-login {
+        padding-right: 2rem;
+    }
+
+    .contenedor-login {
+        width: 60vw;
+    }
+}
+
+@media (min-width: 1200px) {
+    
+    .contenedor-login {
+        width: 30vw;
+    }
+
+    .frase-login {
+        padding-right: 4rem;
+    }
+
+    .frase-login p {
+        font-size: 1.8rem;
+    }
+
+    .acceder:hover {
+        background-color: #034078;
+    }
+}
