--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,7 +8,7 @@
     <!-- TIPOGRAFIA -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     <!-- ESTILOS -->
     <link rel="stylesheet" href="/css/styles-index.css">
@@ -31,7 +31,9 @@
         <section class="menu-sup">
 
             <article class="contenedor-logo">
-                <img src="/img/logo.webp" alt="Logo laguz">
+                <a href="/">
+                    <img src="/img/logo.webp" alt="Logo laguz">
+                </a>
             </article>
 
             <!--------------- FORMULARIO DE BUSQUEDA ------------------>
@@ -78,31 +80,32 @@
 
     </header>
 
-    <section class="banner-imagenes-movil">
-        <article class="slider-box">
-            <ul>
-                <li><img src="/img/banner/banner-1-movil.webp"></li>
-                <li><img src="/img/banner/banner-2-movil.webp"></li>
-                <li><img src="/img/banner/banner-3-movil.webp"></li>
-                <li><img src="/img/banner/banner-4-movil.webp"></li>
-                <li><img src="/img/banner/banner-5-movil.webp"></li>
-            </ul>
-        </article>
-    </section>
-
-    <section class="banner-imagenes">
-        <article class="slider-box">
-            <ul>
-                <li><img src="/img/banner/banner-1.webp" id="banner-1"></li>
-                <li><img src="/img/banner/banner-2.webp"></li>
-                <li><img src="/img/banner/banner-3.webp"></li>
-                <li><img src="/img/banner/banner-4.webp"></li>
-                <li><img src="/img/banner/banner-5.webp"></li>
-            </ul>
-        </article>
-    </section>
-
+    
     <main>
+        <section class="banner-imagenes-movil">
+            <article class="slider-box">
+                <ul>
+                    <li><img src="/img/banner/banner-1-movil.webp"></li>
+                    <li><img src="/img/banner/banner-2-movil.webp"></li>
+                    <li><img src="/img/banner/banner-3-movil.webp"></li>
+                    <li><img src="/img/banner/banner-4-movil.webp"></li>
+                    <li><img src="/img/banner/banner-5-movil.webp"></li>
+                </ul>
+            </article>
+        </section>
+    
+        <section class="banner-imagenes">
+            <article class="slider-box">
+                <ul>
+                    <li><img src="/img/banner/banner-1.webp" id="banner-1"></li>
+                    <li><img src="/img/banner/banner-2.webp"></li>
+                    <li><img src="/img/banner/banner-3.webp"></li>
+                    <li><img src="/img/banner/banner-4.webp"></li>
+                    <li><img src="/img/banner/banner-5.webp"></li>
+                </ul>
+            </article>
+        </section>
+
         <section class="contenedor-productos-destacados">
             <article class="titulo-contenedor">
                 <h3>Productos Destacados</h3>
@@ -110,49 +113,56 @@
 
             <article>
                 <article class="contenedor-productos">
-
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/producto-1.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 78.000</h4>
-                            <p>Monitor HKC ANTTEQ F2145M 21.45" 75hz</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/producto-1.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 78.000</h4>
+                                <p>Monitor HKC ANTTEQ F2145M 21.45" 75hz</p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/producto-2.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 84.000</h4>
-                            <p>Monitor HKC ANTTEQ F238M 23.8" IPS 75hz</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/producto-2.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 84.000</h4>
+                                <p>Monitor HKC ANTTEQ F238M 23.8" IPS 75hz</p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/producto-3.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 85.000</h4>
-                            <p>Watercooling - Refirigeración Líquida para CPU/p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/producto-3.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 85.000</h4>
+                                <p>Watercooling - Refirigeración Líquida para CPU/p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/producto-4.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 44.000</h4>
-                            <p>Coolers para CPU Redragon Effect RGB Air 120mm CC-2000</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/producto-4.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 44.000</h4>
+                                <p>Coolers para CPU Redragon Effect RGB Air 120mm CC-2000</p>
+                            </div>
+                        </a>
                     </div>
 
                 </article>
@@ -173,47 +183,55 @@
                 <article class="contenedor-productos">
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/oferta-1.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 78.000 <div class="descuento">20% Off</div></h4>
-                            <p>Smartwatch Amazfit Bip 3 Pink</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/oferta-1.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 78.000 <div class="descuento">20% Off</div></h4>
+                                <p>Smartwatch Amazfit Bip 3 Pink</p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/oferta-2.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 200.000 <div class="descuento">17% Off</div></h4>
-                            <p>XP-PEN Artist 22R PRO</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/oferta-2.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 200.000 <div class="descuento">17% Off</div></h4>
+                                <p>XP-PEN Artist 22R PRO</p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/oferta-3.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 130.000 <div class="descuento">25% Off</div></h4>
-                            <p>Monitor Philips 272V8LA/55 27'' FULL HD</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/oferta-3.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 130.000 <div class="descuento">25% Off</div></h4>
+                                <p>Monitor Philips 272V8LA/55 27'' FULL HD</p>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="producto">
-                        <div>
-                            <img src="/img/productos/oferta-4.webp" alt="">
-                        </div>
-
-                        <div>
-                            <h4>$ 65.000 <div class="descuento">15% Off</div></h4>
-                            <p>Auricular Redragon Zeus X White H510W-RGB</p>
-                        </div>
+                        <a href="/productDetail">
+                            <div>
+                                <img src="/img/productos/oferta-4.webp" alt="">
+                            </div>
+    
+                            <div>
+                                <h4>$ 65.000 <div class="descuento">15% Off</div></h4>
+                                <p>Auricular Redragon Zeus X White H510W-RGB</p>
+                            </div>
+                        </a>
                     </div>
 
                 </article>
