--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -8,7 +8,7 @@
     <!-- TIPOGRAFIA -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     <!-- ESTILOS -->
     <link rel="stylesheet" href="/css/styles-productDetail.css">
@@ -31,7 +31,9 @@
         <section class="menu-sup">
 
             <article class="contenedor-logo">
-                <img src="/img/logo.webp" alt="Logo laguz">
+                <a href="/">
+                    <img src="/img/logo.webp" alt="Logo laguz">
+                </a>
             </article>
 
             <!--------------- FORMULARIO DE BUSQUEDA ------------------>
